hphp/hack/test/package/package_access/cross_package_with_softrequirepackage_attr_lambda.php.exp.v1
error: Typing[4472] Cannot access function pkg2_call defined in package pkg2 which may not be available [1]
-> pkg2_call is defined in cross_package_with_softrequirepackage_attr_lambda.php--b.php [2]
-> pkg2_call belongs to package pkg2 by this package override [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:27:5
    25 |   public function handleQuery(): void {
    26 |     // Direct call — error: __SoftRequirePackage does NOT allow calling functions in pkg2
[1] 27 |     pkg2_call(); // error
    28 | 
    29 |     // Lambda — also error: __SoftRequirePackage does NOT load pkg2

cross_package_with_softrequirepackage_attr_lambda.php--b.php:4:10
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg2')>>
     3 | 
[2]  4 | function pkg2_call(): void {}

PACKAGES.toml:3:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 

error: Typing[4472] Cannot access function pkg2_call defined in package pkg2 which may not be available [1]
-> pkg2_call is defined in cross_package_with_softrequirepackage_attr_lambda.php--b.php [2]
-> pkg2_call belongs to package pkg2 by this package override [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:31:7
    29 |     // Lambda — also error: __SoftRequirePackage does NOT load pkg2
    30 |     $f = () ==> {
[1] 31 |       pkg2_call(); // error
    32 |     };
    33 |     $f();

cross_package_with_softrequirepackage_attr_lambda.php--b.php:4:10
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg2')>>
     3 | 
[2]  4 | function pkg2_call(): void {}

PACKAGES.toml:3:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 

error: Typing[4472] Cannot access function pkg2_call defined in package pkg2 which may not be available [1]
-> pkg2_call is defined in cross_package_with_softrequirepackage_attr_lambda.php--b.php [2]
-> pkg2_call belongs to package pkg2 by this package override [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:38:7
    36 |     $receiver = new Receiver();
    37 |     $receiver->invokedInPkg2(() ==> {
[1] 38 |       pkg2_call(); // error
    39 |     });
    40 | 

cross_package_with_softrequirepackage_attr_lambda.php--b.php:4:10
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg2')>>
     3 | 
[2]  4 | function pkg2_call(): void {}

PACKAGES.toml:3:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 

error: Typing[4472] Cannot access function pkg2_call defined in package pkg2 which may not be available [1]
-> pkg2_call is defined in cross_package_with_softrequirepackage_attr_lambda.php--b.php [2]
-> pkg2_call belongs to package pkg2 by this package override [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:43:7
    41 |     // Lambda passed to a HOF (in pkg1, available everywhere) — still error for pkg2_call
    42 |     apply_fn(() ==> {
[1] 43 |       pkg2_call(); // error
    44 |     });
    45 | 

cross_package_with_softrequirepackage_attr_lambda.php--b.php:4:10
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg2')>>
     3 | 
[2]  4 | function pkg2_call(): void {}

PACKAGES.toml:3:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 

error: Typing[4472] Cannot access function pkg2_call defined in package pkg2 which may not be available [1]
-> pkg2_call is defined in cross_package_with_softrequirepackage_attr_lambda.php--b.php [2]
-> pkg2_call belongs to package pkg2 by this package override [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:56:7
    54 |     // Lambda calling pkg2 without package loaded — error
    55 |     $f = () ==> {
[1] 56 |       pkg2_call(); // error
    57 |     };
    58 | 

cross_package_with_softrequirepackage_attr_lambda.php--b.php:4:10
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg2')>>
     3 | 
[2]  4 | function pkg2_call(): void {}

PACKAGES.toml:3:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 

error: Typing[4472] Cannot reference this __SoftRequirePackage function [1]
-> This function is marked with __SoftRequirePackage("pkg2"), which is a transition feature to help move a function to __RequirePackage("pkg2"). It does not allow calling into pkg2 itself, but it can only be called from functions that have access to pkg2. [2]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:61:16
    10 | 
    11 | class Receiver {
[2] 12 |   <<__SoftRequirePackage("pkg2")>>
    13 |   public function invokedInPkg2((function(): void) $fn): void {
    14 |     $fn();
       :
    59 |     // Even passing to a method with __SoftRequirePackage doesn't help;
    60 |     $receiver = new Receiver();
[1] 61 |     $receiver->invokedInPkg2(() ==> {
    62 |       pkg2_call(); // error
    63 |     });

error: Typing[4472] Cannot access function pkg2_call defined in package pkg2 which may not be available [1]
-> pkg2_call is defined in cross_package_with_softrequirepackage_attr_lambda.php--b.php [2]
-> pkg2_call belongs to package pkg2 by this package override [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:62:7
    60 |     $receiver = new Receiver();
    61 |     $receiver->invokedInPkg2(() ==> {
[1] 62 |       pkg2_call(); // error
    63 |     });
    64 | 

cross_package_with_softrequirepackage_attr_lambda.php--b.php:4:10
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg2')>>
     3 | 
[2]  4 | function pkg2_call(): void {}

PACKAGES.toml:3:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 

error: Typing[4472] Cannot access function pkg2_call defined in package pkg2 which may not be available [1]
-> pkg2_call is defined in cross_package_with_softrequirepackage_attr_lambda.php--b.php [2]
-> pkg2_call belongs to package pkg2 by this package override [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:77:7
    75 |     // A package 3 "chain" — still error: __SoftRequirePackage does NOT grant access to pkg2
    76 |     $receiver->invokedInPkg3(() ==> {
[1] 77 |       pkg2_call(); // error
    78 |     });
    79 |   }

cross_package_with_softrequirepackage_attr_lambda.php--b.php:4:10
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg2')>>
     3 | 
[2]  4 | function pkg2_call(): void {}

PACKAGES.toml:3:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 

error: Typing[4472] Cannot reference this __SoftRequirePackage function [1]
-> This function is marked with __SoftRequirePackage("pkg3"), which is a transition feature to help move a function to __RequirePackage("pkg3"). It does not allow calling into pkg3 itself, but it can only be called from functions that have access to pkg3. [2]
-> The current function soft-requires package pkg2, which does not include pkg3 [3]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:86:16
    15 |   }
    16 | 
[2] 17 |   <<__SoftRequirePackage('pkg3')>>
    18 |   public function invokedInPkg3((function(): void) $fn): void {
    19 |     $fn();
       :
    79 |   }
    80 | 
[3] 81 |   <<__SoftRequirePackage('pkg2')>>
    82 |   public function handleMixedPackages2(): void {
    83 |     $receiver = new Receiver();
    84 | 
    85 |     // A package 2 should not be able to call anything package 3
[1] 86 |     $receiver->invokedInPkg3(() ==> {
    87 |       pkg3_call(); // error
    88 |     });

error: Typing[4472] Cannot access function pkg3_call defined in package pkg3 which may not be available [1]
-> pkg3_call is defined in cross_package_with_softrequirepackage_attr_lambda.php--c.php [2]
-> pkg3_call belongs to package pkg3 by this package override [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:87:7
    85 |     // A package 2 should not be able to call anything package 3
    86 |     $receiver->invokedInPkg3(() ==> {
[1] 87 |       pkg3_call(); // error
    88 |     });
    89 | 

cross_package_with_softrequirepackage_attr_lambda.php--c.php:3:10
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg3')>>
[2]  3 | function pkg3_call(): void {}

PACKAGES.toml:3:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 

error: Typing[4472] Cannot access function pkg3_call defined in package pkg3 which may not be available [1]
-> pkg3_call is defined in cross_package_with_softrequirepackage_attr_lambda.php--c.php [2]
-> pkg3_call belongs to package pkg3 by this package override [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:92:7
    90 |     // should reject pkg3 calls in a lambda
    91 |     $receiver->invokedInPkg2(() ==> {
[1] 92 |       pkg3_call(); // error
    93 |     });
    94 |   }

cross_package_with_softrequirepackage_attr_lambda.php--c.php:3:10
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg3')>>
[2]  3 | function pkg3_call(): void {}

PACKAGES.toml:3:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 

error: Typing[4472] Cannot access function pkg2_call defined in package pkg2 which may not be available [1]
-> pkg2_call is defined in cross_package_with_softrequirepackage_attr_lambda.php--b.php [2]
-> pkg2_call belongs to package pkg2 by this package override [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:101:5
     99 |   // Lambda passed to HOF — error: __SoftRequirePackage does NOT allow calling functions in pkg2
    100 |   apply_fn(() ==> {
[1] 101 |     pkg2_call(); // error
    102 |   });
    103 | 

cross_package_with_softrequirepackage_attr_lambda.php--b.php:4:10
      1 | <?hh
[3]   2 | <<file: __PackageOverride('pkg2')>>
      3 | 
[2]   4 | function pkg2_call(): void {}

PACKAGES.toml:3:11
      1 | [packages]
      2 | 
[4]   3 | [packages.pkg1]
      4 | include_paths=["//"]
      5 | 

error: Typing[4472] Cannot access function pkg2_call defined in package pkg2 which may not be available [1]
-> pkg2_call is defined in cross_package_with_softrequirepackage_attr_lambda.php--b.php [2]
-> pkg2_call belongs to package pkg2 by this package override [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_with_softrequirepackage_attr_lambda.php--a.php:110:5
    108 |   // Lambda passed to a HOF — error: __SoftRequirePackage does NOT allow calling functions in pkg2
    109 |   apply_fn(() ==> {
[1] 110 |     pkg2_call(); // error
    111 |   });
    112 | 

cross_package_with_softrequirepackage_attr_lambda.php--b.php:4:10
      1 | <?hh
[3]   2 | <<file: __PackageOverride('pkg2')>>
      3 | 
[2]   4 | function pkg2_call(): void {}

PACKAGES.toml:3:11
      1 | [packages]
      2 | 
[4]   3 | [packages.pkg1]
      4 | include_paths=["//"]
      5 | 

13 errors found
